Finalizada la seccion de productos

--- a/index.html
+++ b/index.html
@@ -69,12 +69,96 @@
                     </div>
                 </div>
             </div>
-            
 
             <div class="consolas">
-
+                <div class="consolas__menu">
+                    <h1 class="menu__titulo">Consolas</h1>
+                    <h2 class="menu__subtitulo">Ver todo &#10132</h2>
+                </div>
+                <div class="consolas__productos">
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 7.png" alt="producto 7">
+                        <p class="producto__titulo">Joystick</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 8.png" alt="producto 8">
+                        <p class="producto__titulo">PlayStation</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 9.png" alt="producto 9">
+                        <p class="producto__titulo">Nintendo</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 10.png" alt="producto 10">
+                        <p class="producto__titulo">Mandos</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 11.png" alt="producto 11">
+                        <p class="producto__titulo">Xbox</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="consolas__producto">
+                        <img src="./assets/imagenes/main/producto 12.png" alt="producto 12">
+                        <p class="producto__titulo">Gameboy</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                </div>
             </div>
-            <div class="diversos"></div>
+
+            <div class="diversos">
+                <div class="diversos__menu">
+                    <h1 class="menu__titulo">Diversos</h1>
+                    <h2 class="menu__subtitulo">Ver todo &#10132</h2>
+                </div>
+                <div class="diversos__productos">
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 13.png" alt="producto 13">
+                        <p class="producto__titulo">Camisa Atari</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 14.png" alt="producto 14">
+                        <p class="producto__titulo">Camisa SNES</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 15.png" alt="producto 15">
+                        <p class="producto__titulo">Sonic</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 16.png" alt="producto 16">
+                        <p class="producto__titulo">Control y consola</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 17.png" alt="producto 17">
+                        <p class="producto__titulo">Realidad virtual</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                    <div class="diversos__producto">
+                        <img src="./assets/imagenes/main/producto 18.png" alt="producto 18">
+                        <p class="producto__titulo">Pikachu</p>
+                        <p class="producto__precio">$ 60,00</p>
+                        <a class="producto__link" href="#">Ver producto</a>
+                    </div>
+                </div>
+            </div>
          </section>
     </main>
     <footer>
