--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/body.css">
     <link rel="stylesheet" href="./assets/css/header/header.css">
     <link rel="stylesheet" href="./assets/css/main/productos.css">
+    <link rel="stylesheet" href="./assets/css/main/formulario.css">
 </head>
 <body class="body">
     <header class="encabezado">
@@ -159,6 +160,29 @@
                     </div>
                 </div>
             </div>
+         </section>
+         <section class="container">
+             <div class="formulario">
+                <div class="alura">
+                    <img classs = alura__icon src="./assets/imagenes/main/Vector (1).png" alt="Joystick">
+                    <img classs = alura__icon src="./assets/imagenes/main/AluraGeek.png" alt="Alura">
+                    <img classs = alura__icon src="./assets/imagenes/main/AluraGeek (1).png" alt="Geek">   
+                </div>
+                <div class="sobre__nosotros">
+                    <a class="nosotros__titulos" href="#">Quienes somos</a>
+                    <a class="nosotros__titulos" href="#">Política de Privacidad</a>
+                    <a class="nosotros__titulos" href="#">Programa de fidelidad</a>
+                    <a class="nosotros__titulos" href="#">Nuestras tiendas</a>
+                    <a class="nosotros__titulos" href="#">Quiero ser franquiciado</a>
+                    <a class="nosotros__titulos" href="#">Anuncie aquí</a>
+                </div>
+                <form class="formulario__contacto">
+                    <label for="contacto__titulo"><p id="contacto__titulo">Hable con nosotros</p></label>
+                    <label for="contacto__input"><input id="contacto__input" type="text" placeholder="Nombre" required></label>
+                    <label for="area__mensaje"><textarea name="mensaje" id="area__mensaje" cols="20" rows="5" placeholder="Escribe tu mensaje" required></textarea></label>
+                    <button class="mensaje_btn">Enviar mensaje</button>       
+                </form>
+             </div>    
          </section>
     </main>
     <footer>
