--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./assets/css/main/productos.css">
     <link rel="stylesheet" href="./assets/css/main/formulario.css">
     <link rel="stylesheet" href="./assets/css/footer/footer.css">
+    <link rel="stylesheet" href="./assets/css/header/banner.css">
+    <link rel="stylesheet" href="./assets/css/btns.css">
 </head>
 <body class="body">
     <header class="encabezado">
@@ -30,149 +32,155 @@
                 </div>
             </div>
             <div class="encabezado__btn">
-                <button class="login__btn">Login</button>
+                <button class="login__btn btn">Login</button>
             </div>
         </div>
         <div class="encabezado__banner">
- 
+            <div class="encabezado__textos">
+                <p class="banner__titulo">Abril Promocinal</p>
+                <p>Productos seleccionados con 33% de descuento</p>
+                <button class="consolas__btn">Ver consolas</button>
+            </div>
         </div>
     </header>
     <main class="principal">
-        <section class="productos">
-            <div class="starWars">
-                <div class="starWars__menu">
-                    <h1 class="menu__titulo">Star Wars</h1>
-                    <h2 class="menu__subtitulo">Ver todo &#10132</h2>
-                </div>
-                <div class="starWars__productos">
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 1.png" alt="producto 1">
-                        <p class="producto__titulo">Tasa Stormtrooper</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
+        <section class="container__productos">
+            <div class="productos">
+                <div class="starWars">
+                    <div class="starWars__menu">
+                        <h1 class="menu__titulo">Star Wars</h1>
+                        <h2 class="menu__subtitulo">Ver todo &#10132</h2>
                     </div>
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 2.png" alt="producto 2">
-                        <p class="producto__titulo">Darth Vader Lego</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 3.png" alt="producto 3">
-                        <p class="producto__titulo">Yoda</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 4.png" alt="producto 4">
-                        <p class="producto__titulo">Stormtrooper</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 5.png" alt="producto 5">
-                        <p class="producto__titulo">Baby Yoda</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="starWars__producto">
-                        <img src="./assets/imagenes/main/producto 6.png" alt="producto 6">
-                        <p class="producto__titulo">Kylo Ren</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="consolas">
-                <div class="consolas__menu">
-                    <h1 class="menu__titulo">Consolas</h1>
-                    <h2 class="menu__subtitulo">Ver todo &#10132</h2>
-                </div>
-                <div class="consolas__productos">
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 7.png" alt="producto 7">
-                        <p class="producto__titulo">Joystick</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 8.png" alt="producto 8">
-                        <p class="producto__titulo">PlayStation</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 9.png" alt="producto 9">
-                        <p class="producto__titulo">Nintendo</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 10.png" alt="producto 10">
-                        <p class="producto__titulo">Mandos</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 11.png" alt="producto 11">
-                        <p class="producto__titulo">Xbox</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="consolas__producto">
-                        <img src="./assets/imagenes/main/producto 12.png" alt="producto 12">
-                        <p class="producto__titulo">Gameboy</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
+                    <div class="starWars__productos">
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 1.png" alt="producto 1">
+                            <p class="producto__titulo">Tasa Stormtrooper</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 2.png" alt="producto 2">
+                            <p class="producto__titulo">Darth Vader Lego</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 3.png" alt="producto 3">
+                            <p class="producto__titulo">Yoda</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 4.png" alt="producto 4">
+                            <p class="producto__titulo">Stormtrooper</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 5.png" alt="producto 5">
+                            <p class="producto__titulo">Baby Yoda</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="starWars__producto">
+                            <img src="./assets/imagenes/main/producto 6.png" alt="producto 6">
+                            <p class="producto__titulo">Kylo Ren</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="diversos">
-                <div class="diversos__menu">
-                    <h1 class="menu__titulo">Diversos</h1>
-                    <h2 class="menu__subtitulo">Ver todo &#10132</h2>
+    
+                <div class="consolas">
+                    <div class="consolas__menu">
+                        <h1 class="menu__titulo">Consolas</h1>
+                        <h2 class="menu__subtitulo">Ver todo &#10132</h2>
+                    </div>
+                    <div class="consolas__productos">
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 7.png" alt="producto 7">
+                            <p class="producto__titulo">Joystick</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 8.png" alt="producto 8">
+                            <p class="producto__titulo">PlayStation</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 9.png" alt="producto 9">
+                            <p class="producto__titulo">Nintendo</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 10.png" alt="producto 10">
+                            <p class="producto__titulo">Mandos</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 11.png" alt="producto 11">
+                            <p class="producto__titulo">Xbox</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="consolas__producto">
+                            <img src="./assets/imagenes/main/producto 12.png" alt="producto 12">
+                            <p class="producto__titulo">Gameboy</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="diversos__productos">
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 13.png" alt="producto 13">
-                        <p class="producto__titulo">Camisa Atari</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
+    
+                <div class="diversos">
+                    <div class="diversos__menu">
+                        <h1 class="menu__titulo">Diversos</h1>
+                        <h2 class="menu__subtitulo">Ver todo &#10132</h2>
                     </div>
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 14.png" alt="producto 14">
-                        <p class="producto__titulo">Camisa SNES</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 15.png" alt="producto 15">
-                        <p class="producto__titulo">Sonic</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 16.png" alt="producto 16">
-                        <p class="producto__titulo">Control y consola</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 17.png" alt="producto 17">
-                        <p class="producto__titulo">Realidad virtual</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
-                    </div>
-                    <div class="diversos__producto">
-                        <img src="./assets/imagenes/main/producto 18.png" alt="producto 18">
-                        <p class="producto__titulo">Pikachu</p>
-                        <p class="producto__precio">$ 60,00</p>
-                        <a class="producto__link" href="#">Ver producto</a>
+                    <div class="diversos__productos">
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 13.png" alt="producto 13">
+                            <p class="producto__titulo">Camisa Atari</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 14.png" alt="producto 14">
+                            <p class="producto__titulo">Camisa SNES</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 15.png" alt="producto 15">
+                            <p class="producto__titulo">Sonic</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 16.png" alt="producto 16">
+                            <p class="producto__titulo">Control y consola</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 17.png" alt="producto 17">
+                            <p class="producto__titulo">Realidad virtual</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
+                        <div class="diversos__producto">
+                            <img src="./assets/imagenes/main/producto 18.png" alt="producto 18">
+                            <p class="producto__titulo">Pikachu</p>
+                            <p class="producto__precio">$ 60,00</p>
+                            <a class="producto__link" href="#">Ver producto</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div>      
          </section>
          <section class="container">
              <div class="formulario">
@@ -202,7 +210,7 @@
              </div>    
          </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="rodapie">
             <p class="rodapie__texto">Desarrollado por Fernando Martinez</p>
             <p class="rodapie__texto">2022</p>
