Finalizado estilo css desktop

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 </div>
             </div>
             <div class="encabezado__btn">
-                <button class="login__btn btn">Login</button>
+                <button class="login__btn btnblanco">Login</button>
             </div>
         </div>
         <div class="encabezado__banner">
             <div class="encabezado__textos">
-                <p class="banner__titulo">Abril Promocinal</p>
-                <p>Productos seleccionados con 33% de descuento</p>
-                <button class="consolas__btn">Ver consolas</button>
+                <p class="banner__titulo">Abril Promocional</p>
+                <p class="banner__subtitulo">Productos seleccionados con 33% de descuento</p>
+                <button class="consolas__btn btnazul">Ver consolas</button>
             </div>
         </div>
     </header>
@@ -205,7 +205,7 @@
                     <label for="contacto__titulo"><p id="contacto__titulo">Hable con nosotros</p></label>
                     <label for="contacto__input"><input class="form__input" id="contacto__input" type="text" placeholder="Nombre" required></label>
                     <label for="area__mensaje"><textarea class="form__input" name="mensaje" id="area__mensaje" cols="20" rows="5" placeholder="Escribe tu mensaje" required></textarea></label>
-                    <button class="mensaje_btn">Enviar mensaje</button>       
+                    <button class="mensaje_btn btnazul">Enviar mensaje</button>       
                 </form>
              </div>    
          </section>
