Finalizado estilo css version mobile hasta 425px

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 </div>
                 <div class="menu__busqueda">
                     <label for="busqueda"><input type="text" class="barra__busqueda" name="barra__busqueda" id="busqueda" placeholder="¿Qué desea buscar?"></label>
+                    <img class="imagen__lupa" src="./assets/imagenes/header/lupa.png" alt="Lupa">
                 </div>
             </div>
             <div class="encabezado__btn">
@@ -53,37 +54,37 @@
                     </div>
                     <div class="starWars__productos">
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 1.png" alt="producto 1">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 1.png" alt="producto 1">
                             <p class="producto__titulo">Tasa Stormtrooper</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 2.png" alt="producto 2">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 2.png" alt="producto 2">
                             <p class="producto__titulo">Darth Vader Lego</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 3.png" alt="producto 3">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 3.png" alt="producto 3">
                             <p class="producto__titulo">Yoda</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 4.png" alt="producto 4">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 4.png" alt="producto 4">
                             <p class="producto__titulo">Stormtrooper</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 5.png" alt="producto 5">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 5.png" alt="producto 5">
                             <p class="producto__titulo">Baby Yoda</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="starWars__producto">
-                            <img src="./assets/imagenes/main/producto 6.png" alt="producto 6">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 6.png" alt="producto 6">
                             <p class="producto__titulo">Kylo Ren</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
@@ -98,37 +99,37 @@
                     </div>
                     <div class="consolas__productos">
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 7.png" alt="producto 7">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 7.png" alt="producto 7">
                             <p class="producto__titulo">Joystick</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 8.png" alt="producto 8">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 8.png" alt="producto 8">
                             <p class="producto__titulo">PlayStation</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 9.png" alt="producto 9">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 9.png" alt="producto 9">
                             <p class="producto__titulo">Nintendo</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 10.png" alt="producto 10">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 10.png" alt="producto 10">
                             <p class="producto__titulo">Mandos</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 11.png" alt="producto 11">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 11.png" alt="producto 11">
                             <p class="producto__titulo">Xbox</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="consolas__producto">
-                            <img src="./assets/imagenes/main/producto 12.png" alt="producto 12">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 12.png" alt="producto 12">
                             <p class="producto__titulo">Gameboy</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
@@ -143,37 +144,37 @@
                     </div>
                     <div class="diversos__productos">
                         <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 13.png" alt="producto 13">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 13.png" alt="producto 13">
                             <p class="producto__titulo">Camisa Atari</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 14.png" alt="producto 14">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 14.png" alt="producto 14">
                             <p class="producto__titulo">Camisa SNES</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
-                        <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 15.png" alt="producto 15">
+                        <div  class="diversos__producto">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 15.png" alt="producto 15">
                             <p class="producto__titulo">Sonic</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 16.png" alt="producto 16">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 16.png" alt="producto 16">
                             <p class="producto__titulo">Control y consola</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
-                        <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 17.png" alt="producto 17">
+                        <div  class="diversos__producto">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 17.png" alt="producto 17">
                             <p class="producto__titulo">Realidad virtual</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
                         </div>
                         <div class="diversos__producto">
-                            <img src="./assets/imagenes/main/producto 18.png" alt="producto 18">
+                            <img class="producto__img" src="./assets/imagenes/main/producto 18.png" alt="producto 18">
                             <p class="producto__titulo">Pikachu</p>
                             <p class="producto__precio">$ 60,00</p>
                             <a class="producto__link" href="#">Ver producto</a>
